<resources>
    <string name="app_name">Yalla Bee3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="image_icon">Image Icon</string>
    <string name="category">Category</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="phone">Phone</string>
    <string name="s_i_g_n_u_p">S i g n U P</string>
    <string name="have_account_sign_in">Have Account , Sign In ...</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="add_sponser">Add Sponser</string>
    <string name="sponsor_image">Sponsor Image</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="add_product">Add Product</string>
    <string name="add_location">Add Location</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="my_products">My Products</string>
    <string name="my_favourites">My Favourites</string>
    <string name="chat">Chat</string>
    <string name="reson_of_report">Reson Of Report</string>
    <string name="wrong_price_picture_category">Wrong Price / Picture / Category</string>
    <string name="inappropriate_ad_content">Inappropriate ad content</string>
    <string name="item_sold">Item sold</string>
    <string name="fraud_or_scam">Fraud or Scam</string>
    <string name="indecent_seller">Indecent Seller</string>
    <string name="other">Other</string>
    <string name="send_report">Send report</string>
    <string name="description">Description</string>
    <string name="vehicles">Vehicles</string>
    <string name="see_all">SEE ALL</string>
    <string name="properties">Properties</string>
    <string name="mobile_phones_accessories">Mobile Phones, Accessories</string>
    <string name="electronics_home_appliances">Electronics, Home Appliances</string>
    <string name="home_garden">Home, Garden</string>
    <string name="fashion_beauty">Fashion, Beauty</string>
    <string name="pets">Pets</string>
    <string name="kids_babies">Kids, Babies</string>
    <string name="sporting_goods_bikes">Sporting Goods, Bikes</string>
    <string name="hobbies_music_art_books">Hobbies, Music, Art, Books</string>
    <string name="business_industrial">Business, Industrial</string>
    <string name="ask_seller">Ask Seller</string>
    <string name="contact_saller">Contact Saller</string>
    <string name="s_i_g_n_i_n">S i g n I n</string>
    <string name="signups">Sign UP....</string>
    <string name="select_area">Select Area</string>
    <string name="select_country">Select Country</string>
    <string name="dinar">KWD</string>
    <string name="products_about_saller">Products About Saller</string>
    <string name="products">Products</string>
    <string name="edit_your_product">Edit Your Product</string>
    <string name="delete_your_product">Delete Your Product</string>
    <string name="sub_category">Sub Category</string>
    <string-array name="country">
        <item>Kuwait Governorate</item>
        <item>Hawalli Governorate</item>
        <item> Mubarak al-Kabeer Governorate</item>
        <item>Ahmadi Governorate</item>
    </string-array>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="add_sponsor_now">Add Sponsor Now</string>
    <string name="select_city">Select City</string>
    <string name="call_now">Call Now</string>
    <string name="enter">Enter</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="l_e">L.E</string>
    <string name="aed">AED</string>
    <string name="sar">SAR</string>
    <string name="bump_up_your_ad">Bump up your ad</string>
    <string name="attract_up_to_15x_more_views">Attract up to 15X more views!</string>
    <string name="get_3x_more_views">Get 3x more views</string>
    <string name="your_ad_will_be_boosted_to_the_top_of_the_1st_page_everyday_for_7_days">Your ad will be boosted to the top of the 1st page everyday for 7 days</string>
    <string name="countinue">Countinue</string>
    <string name="feature_your_ad">Feature Your Ad</string>
    <string name="get_15x_more_views">Get 15x more views</string>
    <string name="your_ad_will_stay_among_the_top_ads_of_the_category_pages_over_service_validity">Your ad will stay among the top ads of the category pages over service validity</string>
    <string name="request_a_business_package">Request a Business Package</string>
    <string name="are_you_a_business_or_a_freelancer_benefit_from_our_discounted_packages">Are You a business or a freelancer? Benefit from our discounted packages</string>
    <string name="select_package">Select Package</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="by_registering_account_with_yallabee3_you_accept_our_terms_and_conditions">By Registering account with yallabee3 , you accept our terms and conditions.</string>
    <string-array name="categories">
        <item>Vehicles</item>
        <item>Properties</item>
        <item>Mobile Phones, Accessories</item>
        <item>Electronics, Home Appliances</item>
        <item>Home, Garden</item>
        <item>Fashion, Beauty</item>
        <item>Pets</item>
        <item>Kids, Babies</item>
        <item>Sporting Goods, Bikes</item>
        <item>Hobbies, Music, Art, Books</item>
        <item>Jobs</item>
        <item>Business, Industrial</item>
        <item>Services</item>
    </string-array>
    <string-array name="subcategories_vehicles">
        <item>Boats</item>
        <item>Car Accessories</item>
        <item>Cars</item>
        <item>Motorcycles</item>
        <item>Other Vehicles</item>
        <item>Spare parts</item>
        <item>Trucks, buses</item>
    </string-array>
    <string-array name="subcategories_Properties">
        <item>Properties for Rent</item>
        <item>Properties for Sale</item>
    </string-array>
    <string-array name="subcategories_mobilephone_accessories">
        <item>Mobile Phones</item>
        <item>Mobile Accessories</item>
    </string-array>
    <string-array name="subcategories_Electronics_HomeAppliances">
        <item>TV - Audio - Video</item>
        <item>Computers - Tablets</item>
        <item>Video games - Consoles</item>
        <item>Cameras - Imaging</item>
        <item>Home Appliances</item>

    </string-array>
    <string-array name="subcategories_Home_Garden">
        <item>Decoration - Accessories</item>
        <item>Furniture</item>
        <item>Garden - Outdoor</item>
        <item>Kitchenware</item>
        <item>Other Home - Garden</item>
    </string-array>
    <string-array name="subcategories_Fashion_Beauty">
        <item>Clothing - Accessories</item>
        <item>Jewelry - Watches</item>
        <item>Health - Beauty - Cosmetics</item>
    </string-array>
    <string-array name="subcategories_Pets">
        <item>Cats</item>
        <item>Dogs</item>
        <item>Horses</item>
        <item>Fishes</item>
        <item>Birds</item>
        <item>Other Pets</item>
    </string-array>
    <string-array name="subcategories_Kids_Babies">
        <item>Clothes for Kids and Babies</item>
        <item>Toys</item>
        <item>Cribs - Strollers</item>
        <item>Accessories</item>
        <item>Other Kids - Babies</item>
    </string-array>
    <string-array name="subcategories_Sporting_Goods_Bikes">
        <item>Sporting Goods</item>
        <item>Bikes</item>
        <item>Outdoor Equipment</item>
    </string-array>
    <string-array name="subcategories_Hobbies_Music_Art_Books">
        <item>Antiques - Collectibles</item>
        <item>Books</item>
        <item>Movies - Music</item>
        <item>Musical instruments</item>
        <item>Other items</item>
        <item>Study tools</item>
        <item>Tickets - Vouchers</item>
    </string-array>
    <string-array name="subcategories_Jobs">
        <item>Accounting</item>
        <item>Architecture - Engineering</item>
        <item>Art - Design</item>
        <item>Business Development</item>
        <item>Construction</item>
        <item>Consulting</item>
        <item>Education</item>
        <item>Executive</item>
        <item>HR - Recruiting</item>
        <item>Hospitality</item>
        <item>IT - Telecom</item>
        <item>Jobs Wanted</item>
        <item>Marketing - PR</item>
        <item>Medical - Health</item>
        <item>Other</item>
        <item>Retail</item>
        <item>Sales</item>
        <item>Secretarial</item>
    </string-array>
    <string-array name="subcategories_Business_Industrial">
        <item>Factories Equipment</item>
        <item>Medical Equipment</item>
        <item>Heavy Equipment</item>
        <item>Restaurants Equipment</item>
        <item>Shops Liquidation</item>
        <item>Other Business - Industrial</item>
    </string-array>
    <string-array name="subcategories_Services">
        <item>Business Services</item>
        <item>Car Repairs</item>
        <item>Domestic Services</item>
        <item>Events</item>
        <item>Home</item>
        <item>Movers</item>
        <item>Other Services</item>
        <item>Personal Services</item>
        <item>Pets</item>
        <item>Private Tutors</item>
    </string-array>
    <string-array name="subcountry_kwuit">
        <item>Kuwait City</item>
        <item>Dasman</item>
        <item>Sharq</item>
        <item>Mirgab</item>
        <item>Jibla</item>
        <item>Dasma</item>
        <item>Daeiya</item>
        <item>Sawabir</item>
        <item>Salhiya</item>
        <item>Bneid il-Gar</item>
        <item>Kaifan</item>
        <item>Mansuriya</item>
        <item>Abdullah as-Salim suburb</item>
        <item>Nuzha</item>
        <item>Faihaa</item>
        <item>Shamiya</item>
        <item>Rawda</item>
        <item>Adiliya</item>
        <item>Khaldiya</item>
        <item>Qadsiya</item>
        <item>Qurtuba</item>
        <item>Surra</item>
        <item>Yarmuk</item>
        <item>Shuwaikh</item>
        <item>Rai</item>
        <item>Ghirnata</item>
        <item>Sulaibikhat</item>
        <item>Doha</item>
        <item>Nahdha</item>
        <item>Jabir al-Ahmad City</item>
        <item>Qairawan</item>
    </string-array>
    <string-array name="subcountry_Hawalli">
        <item>Hawally</item>
        <item>Rumaithiya</item>
        <item>Jabriya</item>
        <item>Salmiya</item>
        <item>Mishrif</item>
        <item>Shaab</item>
        <item>Bayan</item>
        <item>Bidie</item>
        <item>Nigra</item>
        <item>Salwa</item>
        <item>Maidan Hawalli</item>
        <item>Mubarak aj-Jabir suburb</item>
        <item>South Surra</item>
        <item>Hittin</item>
    </string-array>
    <string-array name="Mubarak_kwuit">
        <item>Mubarak al-Kabeer</item>
        <item>Adan</item>
        <item>Qurain</item>
        <item>Qusur</item>
        <item>Sabah as-Salim suburb</item>
        <item>Misila</item>
        <item>Abu Fteira</item>
        <item>Sabhan</item>
        <item>Fintas</item>
        <item>Funaitis</item>
    </string-array>
</resources>