<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpEmaratActivity">

    <TextView
        android:id="@+id/signupe_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/signe_up_client_img_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:src="@drawable/user_img"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_textView" />


    <EditText
        android:id="@+id/signupe_name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signe_up_client_img_view"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signupe_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_name_editText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signupe_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_email_editText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signupe_repassword_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:hint="@string/re_type_password"
        android:inputType="numberPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_password_editText"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/signupe_phone_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_repassword_editText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/signupe_country_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/select_city"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_phone_editText" />

    <LinearLayout
        android:id="@+id/linearmmme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_spinner_primarry"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_country_textview">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:spinnerMode="dialog"
            android:theme="@style/Spinner"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/signup_country_textview">

        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>

    <Button
        android:id="@+id/signupe_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/s_i_g_n_u_p"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/linearmmme" />

    <TextView
        android:id="@+id/user_signin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:text="@string/have_account_sign_in"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signupe_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</android.support.constraint.ConstraintLayout>