<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:radius="50dp"
    android:left="20dp"
    android:top="20dp"
    android:right="20dp"
    android:bottom="20dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/email_forget_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_margin="8dp"
        android:background="@drawable/back_solid_white"
        android:padding="8dp"
        android:hint="@string/email" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_forget_edittext" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancle_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHide"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/colorFacebook"
            android:textSize="18sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/colorFacebook"
            />

        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHide"
            android:textColor="@color/colorFacebook"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>